--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.add-day-btn {
+  background-color: white;
+  border-color: rgb(41, 118, 211);
+  border-style: solid;
+  border-width: 1px;
+  color:rgb(41, 118, 211);
+  height: 36px;
+  width: 62px;
+  border-radius: 2px;
+  cursor: pointer;
+  margin-right: 10px;
+  transition: background-color 1s,
+  color 1s
+}
+.add-day-btn:hover {
+  background-color:rgb(41, 118, 211);
+  color: white;
+}
+.add-day-btn:active {
+  opacity: 0.7;
+}
